--- a/ferticonnectmedecin-login.html
+++ b/ferticonnectmedecin-login.html
@@ -23,15 +23,15 @@
     <div class="bg_login_register">
         <div class="contet_bg">
             <div class="image_L_R">
-                <img src="/img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.png" alt="">
                 <p>Bienvenue sur</p>
                 <h1> FertiConnect</h1>
                 <p id="p_image_L_R">connecttez vous avect votre copmt </p>
                 <div class="img_login" id="med"  style="display: none;">
-                    <img src="/img/undraw_doctors_p6aq.svg" alt="">
+                    <img src="img/undraw_doctors_p6aq.svg" alt="">
                 </div>
                 <div class="img_login" id="pat" style="display: none;">
-                    <img src="/img/undraw_mobile_app_re_catg.svg" alt="">
+                    <img src="img/undraw_mobile_app_re_catg.svg" alt="">
                 </div>
                 <br>
                 <button id="retourne" class="btnVide">retourner</button>
@@ -40,7 +40,7 @@
             <div class="content_L_R">
                 <div class="logo_ferti">
                     <div class="logo_ferti_rond">
-                        <img src="/img/ferticonnectiLogoGreen.png" alt="">
+                        <img src="img/ferticonnectiLogoGreen.png" alt="">
                     </div>
                     <br>
                     <h2 id="titreindex"></h2>
