--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -30,12 +30,11 @@
             <h1> FertiConnect</h1>
         </div>
         <div class="completeprofilnotif" id="completeprofilnotif" style="display: flex;">
-            <i class="bi bi-info-circle-fill"></i>
-            <h3 id="pourcentage">Complete votre profile 5%</h3>
+            <h3 id="pourcentage"></h3>
         </div>
 
 
-        <div class="optionsnavbar">
+        <div class="optionsnavbar" id="loggouut_nav">
             <i class="bi bi-gear-wide-connected"></i>
         </div>
 
@@ -138,7 +137,6 @@
               <br>
               <button class="btn supprimer" id="fermer2">fermer</button>
             </div>
-
         </div>
     </div>
 
@@ -148,6 +146,22 @@
     </div>
 
 </div>
+
+<div class="photoprofilchangerbg" id="deconnectionbg" style="display: none;">
+    <div class="deconnection">
+        <p>Souhaites-tu te déconnecter ?</p>
+        <img src="img/undraw_quitting_time_re_1whp.svg" alt="">
+        <br>
+        <div class="btns_bg_info">
+           <button class="btn supprimer" type="submit" id="deco_neccterbtn">déconnecter</button>
+           <br>
+           <button class="btn souvgarder" id="anulerdeco_neccterbtn">fermer</button>
+         </div>
+
+    </div>
+    
+</div>
+
 
 <script src="ferticonnectmedecin-profilepage.js" type="module"></script>
 
