--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -54,7 +54,7 @@
             <i id="nameuser_i" class="bi bi-patch-check-fill" style="display: none;"></i>
         </div>
         <div class="nomeUtulisateur">
-            <p id="numberdabonner">0 abonnés</p>
+            <p id="numberdabonner"></p>
         </div>
         <div class="abonneretmessage">
             <div class="btnprfil" id="abonnerbutton" style="display: none;">
