--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -50,100 +50,13 @@
                 </div>
             </div>
             <div class="ligne_"></div>
+
             <div class="mycabinsbg" id="mycabinsbg"  style="height: auto;">
                 <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg">
                     <i class="bi bi-hospital"></i>
-                    <h2>mes cabins</h2>
+                    <h2>cabines</h2>
                 </div>
                 <div class="mescabins_" id="mescabins_" style="display: none;">
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
                     <div class="cabinfoss">
                         <div class="mescabins_image">
                             <img src="img/ferticonnectiLogoWhite.png" alt="">
@@ -157,112 +70,16 @@
                 
             </div>
             <br>
-            <div class="mycabinsbg" id="mycabinsbg2"  style="height: auto;">
-                <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg">
-                    <i class="bi bi-hospital"></i>
-                    <h2>mes cabins</h2>
-                </div>
-                <div class="mescabins_" id="mescabins_" style="display: none;">
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
 
+            <div class="mycabinsbg" id="mycabinsbg2"  style="height: auto;">
+                <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg2">
+                    <i class="bi bi-people"></i>
+                    <h2>Amis</h2>
                 </div>
+                <div class="mescabins_" id="mescabins_2" style="display: none;"></div>
                 
             </div>
+            <br>
 
         </div>
 
