--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -72,7 +72,43 @@
             <p id="etap2">Ajoutez une photo de profil.</p>
             <p id="etap3">Ajoutez une photo de couverture.</p>
             <p id="etap4">Remplissez le formulaire.</p>
-        </div>        
+        </div>  
+        <br>
+        <div class="mycabinsbg" id="mycabinsbg2"  style="height: auto; display: none;">
+            <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg2">
+                <i class="bi bi-clipboard-plus"></i>
+                <h2>Créez votre propre espace cabine</h2>
+            </div>
+            <div class="mescabins_" id="mescabins_2" style="display: none;">
+                <div id="creationcabineForm" class="conncxion_inputs">
+                    <h1>Création de cabine</h1>
+                    <p>Créez votre propre espace cabine sur "Ferticonnect" afin de partager des publications et des conseils entre les membres de cette cabine. Établissez également un espace médical axé sur la solidarité, favorisant ainsi l'échange d'informations et de soutien entre les utilisateurs.</p>
+                    <div class="input_styl">
+                        <label for="nom">nom de cabine:</label>
+                        <input type="text" id="nomdecabin" required>
+                    </div>
+                    <br>
+                  <button class="btn souvgarder"  id="confirmeCreecabine">
+                        <div id="original2" style="display: block;">
+                            Créez
+                        </div>
+                        <div class="cs-loader-inner" id="loader2" style="display: none;">
+                            <label>	●</label>
+                            <label>	●</label>
+                            <label>	●</label>
+                            <label>	●</label>
+                        </div>
+                        <div id="Done2" style="display: none;">
+                            terminée
+                        </div>
+                  </button>
+                  <br>
+                  <p id="message_creation_canine"></p>
+                </div>
+
+            </div>
+            
+        </div>
 
     </div>
 
