--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -109,6 +109,10 @@
             </div>
             
         </div>
+        <br>
+        <div class="fotherprofile">
+            <p id="fotherprofile"></p>
+        </div>
 
     </div>
 
