--- a/ferticonnectmedecin-login.html
+++ b/ferticonnectmedecin-login.html
@@ -28,7 +28,7 @@
                 <h1> FertiConnect</h1>
                 <p id="p_image_L_R">connecttez vous avect votre copmt </p>
                 <div class="img_login" id="med"  style="display: none;">
-                    <img src="img/undraw_doctors_p6aq.svg" alt="">
+                    <img src="img/undraw_medicine_b-1-ol (1).svg" alt="">
                 </div>
                 <div class="img_login" id="pat" style="display: none;">
                     <img src="img/undraw_mobile_app_re_catg.svg" alt="">
