--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -56,17 +56,7 @@
                     <i class="bi bi-hospital"></i>
                     <h2>cabines</h2>
                 </div>
-                <div class="mescabins_" id="mescabins_" style="display: none;">
-                    <div class="cabinfoss">
-                        <div class="mescabins_image">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
-                        </div>
-                        <div class="mescabins_name">
-                            <h1>elrahma cabine</h1>
-                        </div>
-                    </div>
-
-                </div>
+                <div class="mescabins_" id="mescabins_" style="display: none;"></div>
                 
             </div>
             <br>
@@ -129,6 +119,38 @@
         </div>
         <div class="iconnavbar">
             <i class="bi bi-bell"></i>
+        </div>
+    </div>
+
+    <div class="commentaire_bg" id="commentaire_bg" style="display: none;" >
+        <div class="commentaire_">
+            <div class="head_commentaire_">
+                <h1>Commentaires </h1>
+                <i class="bi bi-x-octagon-fill" id="closecommentair"></i>
+            </div>
+            <div class="listeComments_bg" id="listeComments_bg_list">
+                <div class="comment_listeComments_bg">
+                    <div class="hedercomment">
+                        <div class="hedercomment_img">
+                            <img src="img/ferticonnectiLogoWhite.png" alt="">
+                        </div>
+                        <h1 id="name_comment_user"> Bellakhdar Abdeldjabar</h1>
+                        <i></i>
+                    </div>
+                    <div class="content_comment">
+                        <p id="content_commentp">hello f   jhdfuiviorf syufghsiufs sygfisgfik fyugfivf hfggfb fugyfh fusgbf sfgys ferticonnect jhhekdigzeif hjfzejf sydugcbyjdv zdcbygudbhjzbeb zegbiilendipqeb hquisbhdciec huiebiueo </p>
+                    </div>
+                </div>
+            </div>
+            <div class="addcommentaire_bg">
+                <div class="addpublication1">
+                    <div class="photoprofilepubadd comment">
+                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.png" alt="">
+                    </div>
+                    <textarea class="inputpubadd" id="inputpubadd_comment" rows="1" cols="50" placeholder="Ajouter un commentaire ?"></textarea>
+                    <i class="bi bi-send" id="send_comment"></i>
+                </div>
+            </div>
         </div>
     </div>
 
