--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="commentaire_bg" id="commentaire_bg" style="display: none;" >
-        <div class="commentaire_">
+        <div class="commentaire_" id="commentaire_">
             <div class="head_commentaire_">
                 <h1>Commentaires </h1>
                 <i class="bi bi-x-octagon-fill" id="closecommentair"></i>
