--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -138,7 +138,7 @@
                         <i></i>
                     </div>
                     <div class="content_comment">
-                        <p id="content_commentp">hello f   jhdfuiviorf syufghsiufs sygfisgfik fyugfivf hfggfb fugyfh fusgbf sfgys ferticonnect jhhekdigzeif hjfzejf sydugcbyjdv zdcbygudbhjzbeb zegbiilendipqeb hquisbhdciec huiebiueo </p>
+                        <p id="content_commentp"></p>
                     </div>
                 </div>
             </div>
