--- a/ferticonnectmedecin-login.html
+++ b/ferticonnectmedecin-login.html
@@ -28,10 +28,10 @@
                 <h1> FertiConnect</h1>
                 <p id="p_image_L_R">connecttez vous avect votre copmt </p>
                 <div class="img_login" id="med"  style="display: none;">
-                    <img src="img/undraw_medicine_b-1-ol (1).svg" alt="">
+                    <img src="img/medcinlogin.svg" alt="">
                 </div>
                 <div class="img_login" id="pat" style="display: none;">
-                    <img src="img/undraw_mobile_app_re_catg.svg" alt="">
+                    <img src="img/utilisateurlogin.svg" alt="">
                 </div>
                 <br>
                 <button id="retourne" class="btnVide">retourner</button>
