--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -71,6 +71,15 @@
             </div>
             <br>
 
+            <div class="mycabinsbg" id="mycabinsbg3"  style="height: auto;">
+                <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg3">
+                    <i class="bi bi-translate"></i>
+                    <h2>Langues</h2>
+                </div>
+                <div class="mescabins_" id="mescabins_3" style="display: none;"></div>
+            </div>
+            <br>
+
         </div>
 
         <div class="midleespace" id="midleespace">
