--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -190,7 +190,7 @@
 <div class="photoprofilchangerbg" id="deconnectionbg" style="display: none;">
     <div class="deconnection">
         <p>Souhaites-tu te déconnecter ?</p>
-        <img src="" alt="">
+        <img src="img/deconecter.svg" alt="">
         <br>
         <div class="btns_bg_info">
            <button class="btn supprimer" type="submit" id="deco_neccterbtn">déconnecter</button>
