--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -46,6 +46,8 @@
             <p id="numberofMembre"></p>
             <p id="messageAjoutePhoto" style="color: red;"><i class="bi bi-image-fill"></i> Ajoutez une photo de couverture à votre groupe</p>
             <div class="ligne_"></div>
+
+
             <div class="profilinfobg" id="profilinfobg">
                 <div class="photoprofilepubadd1">
                     <img id="photoprofilepubadd1" src="img/ferticonnectiLogoWhite.png" alt="">
@@ -56,6 +58,14 @@
                 </div>
             </div>
             <div class="ligne_"></div>
+
+            <div class="mycabinsbg" id="mycabinsbg3"  style="height: auto;">
+                <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg4">
+                    <i class="bi bi-house-heart"></i>
+                    <h2>fertiConnect - Page d'accueil</h2>
+                </div>
+            </div>
+            <br>
 
             <div class="mycabinsbg" id="mycabinsbg"  style="height: auto;">
                 <div class="titleoptionmycabinsbg" id="titleoptionmycabinsbg">
@@ -110,7 +120,124 @@
         </div>
 
         <div class="rightespace" id="rightespace">
-            
+            <div class="discution_bg">
+                <div class="header_message">
+                    <div class="Image_header_message"></div>
+                    <div class="name_header_message">
+                        <h1>hahkjjon</h1>
+                    </div>
+                    <div class="option_header_message" id="option_header_message">
+                        <i class="bi bi-menu-button-wide-fill"></i>
+                    </div>
+                </div>
+                <div class="content_message" id="content_message" >
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="autreM_bg">
+                        <div class="autre_message">
+                            <p>hello ijyebè etèg tggèev gtèev gtètèev tève etèvtve vetve f etv ef ef</p>
+
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="autreM_bg">
+                        <div class="autre_message">
+                            <p>hello ijyebè etèg tggèev gtèev gtètèev tève etèvtve vetve f etv ef ef</p>
+
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="autreM_bg">
+                        <div class="autre_message">
+                            <p>hello ijyebè etèg tggèev gtèev gtètèev tève etèvtve vetve f etv ef ef</p>
+
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="autreM_bg">
+                        <div class="autre_message">
+                            <p>hello ijyebè etèg tggèev gtèev gtètèev tève etèvtve vetve f etv ef ef</p>
+
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="autreM_bg">
+                        <div class="autre_message">
+                            <p>hello ijyebè etèg tggèev gtèev gtètèev tève etèvtve vetve f etv ef ef</p>
+
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <p>hello gè ytv yytv è iu yibb ub vytv vghv gfvyh yt -èv </p>
+                        </div>
+                    </div>
+                    <div class="monM_bg">
+                        <div class="mon_message">
+                            <img src="img/verifierd.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom_message">
+                    <div class="sendImageicon">
+                        <i class="bi bi-image-fill"></i>
+                    </div>
+                    <textarea class="messageecrit" name="" id=""></textarea>
+                    <div class="sendmessageicon">
+                        <i class="bi bi-send-fill"></i>
+                    </div>
+                </div>
+                
+                <div class="scrollButton" id="scrollButton">
+                    <i class="bi bi-arrow-down-circle-fill"></i>
+                </div>
+
+                <div class="optionbg_wind" id="optionbg_wind">
+                    <div class="optionbg_wind_btn" id="optionbg_wind_btn_home">
+                        <i class="bi bi-arrow-return-left"></i>
+                        <p>Retourner à la page d'accueil</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="commentaire_bg" id="commentaire_bg" style="display: none;" >
