--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -127,7 +127,7 @@
                         <h1>hahkjjon</h1>
                     </div>
                     <div class="option_header_message" id="option_header_message">
-                        <i class="bi bi-menu-button-wide-fill"></i>
+                        <i class="bi bi-sliders"></i>
                     </div>
                 </div>
                 <div class="content_message" id="content_message" >
