--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -61,7 +61,7 @@
                 <i class="bi bi-person-plus-fill"></i>
             </div>
             <div class="btnprfil" id="messagebutton" style="display: none;">
-                <i class="bi bi-chat-heart-fill"></i>
+                <i class="bi bi-chat-heart-fill" id="messagebuttonicon"></i>
             </div>
             <div class="btnprfil" id="infobtn" style="display: none;">
                 <i class="bi bi-info-circle-fill"></i>
