--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -122,9 +122,9 @@
         <div class="rightespace" id="rightespace">
             <div class="discution_bg">
                 <div class="header_message">
-                    <div class="Image_header_message"></div>
+                    <div class="Image_header_message" id="Image_header_message"></div>
                     <div class="name_header_message">
-                        <h1>hahkjjon</h1>
+                        <h1 id="name_room_message"></h1>
                     </div>
                     <div class="option_header_message" id="option_header_message">
                         <i class="bi bi-sliders"></i>
@@ -138,7 +138,7 @@
                     </div>
                     <textarea class="messageecrit" name="" id="messageecrit"placeholder="Écris un message"></textarea>
                     <div class="sendmessageicon" id="sendmessageicon">
-                        <i class="bi bi-send-fill"></i>
+                        <i class="bi bi-send"></i>
                     </div>
                     <p id="QMPEUM" style="display: none;">Que le médecin peut envoyer un message </p>
                 </div>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
 
-                <div class="creeUneRoomCabineBg" id="creeUneRoomCabineBg" style="display: flex;">
+                <div class="creeUneRoomCabineBg" id="creeUneRoomCabineBg" style="display: none;">
                     <div class="bg_cree_CabineRoom_place">
                         <i class="bi bi-chat-right-text"></i>
                         <h1>Créez une messagerie pour votre cabinet</h1>
@@ -208,6 +208,7 @@
                         </div>
                     </div>
                 </div>
+
 
 
 
@@ -341,6 +342,11 @@
             </div>
         </div>
     </div>
+
+    <div class="afficheImagesBg" id="afficheImagesBg" style="display: none;"></div>
+    <div class="afficheImage_place" id="afficheImage_place"style="display: none;"></div>
+
+
 
 
     <script src="ferticonnectmedecin-cabine.js" type="module"></script>
