--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -217,7 +217,16 @@
 
             </div>
 
-            <div class="listemesagebg" id="listemesagebg" > </div>
+            <div class="listemesagebg" id="listemesagebg" > 
+                <div class="title_listemesagebg">
+                    <div class="image_title_listemesagebg">
+                        <img src="img/ferticonnectiLogoWhite.png" alt="">
+                    </div>
+                    <h1>FertiConnect messagerie</h1>
+                </div>
+                <div class="ligne_"></div>
+
+            </div>
 
         </div>
     </div>
