--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -147,7 +147,7 @@
                     <i class="bi bi-arrow-down-circle-fill"></i>
                 </div>
 
-                <div class="optionbg_wind" id="optionbg_wind">
+                <div class="optionbg_wind" id="optionbg_wind" style="display: none;">
                     <div class="optionbg_wind_btn" id="optionbg_wind_btn_home">
                         <i class="bi bi-arrow-return-left"></i>
                         <p>Retourner à la page d'accueil</p>
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-
+                
 
 
 
